# tempserv

./: .gitignore  CMakeLists.txt  CelSQL.cpp  CelSQL.h  Database.cpp  Database.h  README  Sensor.cpp  Sensor.h  Types.h  all.sh  build_osx.sh  cjob.sh  clock-runtime.sh  clockjob.sh  create_db.sh  current-temp.sh  last-24-hours.sh  last-30-days.sh  last-7-days.sh  main.cpp  optional.hpp  plot-all.sh  plot-last24h.sh  plot-last30days.sh  plot-last7days.sh  plot-today.sh  queries.txt  query.txt  runloop.sh  schema.sql  temp.db  today.sh
